--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,25 +22,34 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/ControlAsistencia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=src/jcalendar-1.4.jar
 file.reference.material-ui-swing-1.1.1_pre-release_6.1-jar-with-dependencies.jar=src\\material-ui-swing-1.1.1_pre-release_6.1-jar-with-dependencies.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
-    ${file.reference.material-ui-swing-1.1.1_pre-release_6.1-jar-with-dependencies.jar}
+    ${file.reference.material-ui-swing-1.1.1_pre-release_6.1-jar-with-dependencies.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -48,6 +57,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -97,7 +108,7 @@ javafx.swing=true
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
-main.class=controlasistencia.HOME
+main.class=controlasistencia.Main
 # For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
 manifest.custom.codebase=*
 # Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
@@ -109,9 +120,13 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
